Data-science/nifi/01-nifi-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nifi
  name: nifi
  namespace: telco-webapplications-mvp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/telco-webapplications-mvp/nifi
        imagePullPolicy: Always
        name: nifi
        ports:
        - containerPort: 8443
        volumeMounts:
        - mountPath: /opt/nifi/nifi-current
          name: nifi-storage
      volumes:
      - name: nifi-storage
        persistentVolumeClaim:
          claimName: nifi-storage
