Data-science/nifi/03-nifi-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nifi
  name: nifi
  namespace: telco-webapplications-mvp
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: nifi
  type: ClusterIP
