Data-science/nifi/04-nifi-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nifi
  name: nifi
  namespace: telco-webapplications-mvp
spec:
  host: nifi-telco-webapplications-mvp.apps.mvp.telcostackmvp.br.telefonica.com
  tls:
    termination: passthrough
  to:
    kind: Service
    name: nifi
    weight: 100
  wildcardPolicy: None
